--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,10 @@
   "description": "Toggle Xdebug session cookie (XDEBUG_SESSION) on/off",
   "version": "1.0",
   "permissions": [
+    "storage",
+    "declarativeNetRequest",
+    "declarativeNetRequestFeedback",
+    "activeTab",
     "cookies",
     "activeTab",
     "tabs"
